--- a/introduce/style.css
+++ b/introduce/style.css
@@ -11,7 +11,7 @@ body {
 }
 
 .card-image {
-    max-height: 750px;
+    max-height: 740px;
 }
 
 .slider {
@@ -24,4 +24,8 @@ body {
 
 .navbar-brand {
     font-weight: 800;
+}
+
+.icons {
+    size: 2px;
 }
